--- a/html/popup.html
+++ b/html/popup.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>ReadAction</title>
+    <title>Readaction</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
@@ -14,7 +14,7 @@
 
   <body style="width: 500px; height: 500px;">
     <div class="header-container">
-        <header style="font-size: x-large;" class="container-fluid"><img src="../img/logo.png" style="width: 36px; height: 36px; margin-right: 25px;">ReadAction<a class="btn btn-primary" id="btn1" role="button" style="margin-left: 25px">Where to Vote</a><a class="btn btn-primary" id="btn2" role="button" style="margin-left: 25px">Register</a></header>
+        <header style="font-size: x-large;" class="container-fluid"><img src="../img/logo.png" style="width: 36px; height: 36px; margin-right: 25px;">Readaction<a class="btn btn-primary" id="btn1" role="button" style="margin-left: 25px">Where to Vote</a><a class="btn btn-primary" id="btn2" role="button" style="margin-left: 25px">Register</a></header>
         <div class="p-3">
             <div>
                 <p style="font-weight: 500;" class="mb-0">Political Bias</p>
