--- a/html/popup.html
+++ b/html/popup.html
@@ -13,7 +13,7 @@
 
   <body style="width: 500px; height: 500px;">
     <div class="header-container">
-        <header style="font-size: x-large;" class="container-fluid"><img src="../img/logo.png" style="width: 36px; height: 36px; margin-right: 25px;">Readaction<a class="btn btn-primary" style="background-color: #c0ecfc!important; margin-left: 25px; color:#082c6c!important;" id="btn1" role="button">Where to Vote</a><a class="btn btn-primary" id="btn2" role="button" style="background-color: #c0ecfc!important; margin-left: 25px; color:#082c6c!important;">Register</a></header>
+        <header style="font-size: x-large;" class="container-fluid"><img src="../img/logo.png" style="width: 36px; height: 36px; margin-right: 25px;">Readaction<button class="btn btn-primary" style="background-color: #c0ecfc!important; margin-left: 25px; color:#082c6c!important;" id="btn1" type="button">Where to Vote</button><button class="btn btn-primary" id="btn2" type="button" style="background-color: #c0ecfc!important; margin-left: 25px; color:#082c6c!important;">Register</button></header>
         <div class="p-3">
             <div>
                 <p style="font-weight: 500;" class="mb-0">Political Bias</p>
